--- a/src/index.css
+++ b/src/index.css
@@ -114,3 +114,14 @@ body, .app {
   cursor: pointer;
   font-size: inherit;
 }
+
+.add-contact {
+  display: block;
+  width: 73px;
+  background: white;
+  background-image: url('./icons/person-add.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px;
+  font-size: 0;
+}
